src/snapshots/fec_receipt__tests__F3PN_1920459.snap
---
source: src/tests.rs
expression: "preview::text(&receipt, false)"
---
  +--------------------------------+
  |================================|
2x|        F O R M   3 P           |
  |  Presidential Campaign Report  |
  |          FEC-1920459           |
  |================================|
2x|EDWARDS FOR PRESIDENT           |
  |C00384073 - RINGGOLD, GA        |
  |--------------------------------|
  |Report  Q3 - October Quarterly  |
  |Period  Jul 1 - Sep 30, 2025    |
  |--------------------------------|
  |THIS PERIOD                     |
  |Cash on hand, start            0|
  |+ Receipts                     0|
  |- Disbursements                0|
  |Cash on hand, end              0|
  |Debts they owe           331,586|
  |--------------------------------|
  |Signed  Lora Haggard            |
  |        Oct 15, 2025            |
  |                                |
  |                                |
  |                                |
  |       [ image 384x148 ]        |
  |                                |
  |                                |
  | scan for the filing on fec.gov |
  |                                |
  |                                |
  |                                |
  |                                |
  +--------------------------------+
